# cecctl

./: Cargo.toml  build.rs  flake.nix  shell.nix
.cargo/: config
src/: main.rs
