[package]
name = "cecctl"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
cec-rs = "6.0.0"
clap = { version = "4.1.4", features = ["derive"] }
config = "0.13.3"
dirs = "4.0.0"
heck = "0.4.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.152"
